force-app/main/default/objects/Leave__c/Leave__c.object-meta.xml
<CustomObject>
    <label>Leave</label>
    <nameField>
        <label>L Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Leaves</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>