force-app/main/default/objects/Leave__c/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Leaves</relationshipLabel>
    <relationshipName>Leaves</relationshipName>
    <type>Lookup</type>
</CustomField>