force-app/main/default/objects/Leave__c/fields/last_modified_date__c.field-meta.xml
<CustomField>
    <fullName>last_modified_date__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>last modified date</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leaves1</relationshipName>
    <type>Lookup</type>
</CustomField>