force-app/main/default/objects/Leave__c/fields/No_of_Days_Leave_Applied__c.field-meta.xml
<CustomField>
    <fullName>No_of_Days_Leave_Applied__c</fullName>
    <label>No of Days Leave Applied</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>