force-app/main/default/objects/Leave__c/fields/Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submitted By</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Leaves (Submitted By)</relationshipLabel>
    <relationshipName>Leaves1</relationshipName>
    <type>Lookup</type>
</CustomField>